--- a/po/nl.po
+++ b/po/nl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-15 09:19+0100\n"
-"PO-Revision-Date: 2011-05-18 16:56+0200\n"
+"PO-Revision-Date: 2011-05-18 19:35+0200\n"
 "Last-Translator: Pjotr <pliniusminor@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: nl\n"
@@ -122,7 +122,7 @@ msgstr "<b>Groep:</b>"
 
 #: ../data/ui/file-prop.glade.h:5
 msgid "<b>Last Access:</b>"
-msgstr "<b>Laatst gebruikt:</b>"
+msgstr "<b>Laatste Toegang:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
 msgid "<b>Last Modification:</b>"
@@ -154,7 +154,7 @@ msgstr "<b>Doel:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
 msgid "<b>Total Size of Files:</b>"
-msgstr "<b>Totale grootte van :</b>"
+msgstr "<b>Totale grootte van Bestanden:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
 msgid "<b>_Group:</b>"
@@ -191,11 +191,11 @@ msgstr ""
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
-msgstr "Lezen en schrijven"
+msgstr "Lezen en Schrijven"
 
 #: ../data/ui/file-prop.glade.h:23
 msgid "Read only"
-msgstr "Alleen lezen"
+msgstr "Alleen-lezen"
 
 #: ../data/ui/file-prop.glade.h:24
 msgid "Select the application used to open files of this type "
@@ -203,7 +203,7 @@ msgstr "Selecteer de toepassing om bestanden van dit type te openen"
 
 #: ../data/ui/file-prop.glade.h:25
 msgid "Write only"
-msgstr "Alleen schrijven"
+msgstr "Alleen-schrijven"
 
 #: ../data/ui/file-prop.glade.h:26
 msgid "_General"
@@ -211,20 +211,20 @@ msgstr "_Algemeen"
 
 #: ../data/ui/file-prop.glade.h:27
 msgid "_Permissions"
-msgstr "_Toestemmingen"
+msgstr "_Rechten"
 
 #. Processing: <Name of currently proccesed file>
 #: ../data/ui/progress.glade.h:2
 msgid "<b>Processing:</b>"
-msgstr "<b>Verwerken:</b>"
+msgstr "<b>Aan het verwerken:</b>"
 
 #: ../data/ui/progress.glade.h:3
 msgid "<b>Progress:</b>"
-msgstr "<b>Vooruitgang:</b>"
+msgstr "<b>Voortgang:</b>"
 
 #: ../data/ui/progress.glade.h:4
 msgid "<b>Some errors occurred:</b>"
-msgstr "<b>Een paar foutmeldingen zijn opgetreden:</b>"
+msgstr "<b>Enkele fouten zijn opgetreden:</b>"
 
 #: ../data/ui/progress.glade.h:5
 msgid "<b>Time remaining:</b>"
@@ -238,7 +238,7 @@ msgstr "<b>Naar:</b>"
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:9
 msgid "Preparing..."
-msgstr "Voorbereiden..."
+msgstr "Aan het voorbereiden..."
 
 #: ../data/ui/preferred-apps.glade.h:1
 msgid "<b>Mail client</b>"
@@ -246,7 +246,7 @@ msgstr "<b>E-mailprogramma</b>"
 
 #: ../data/ui/preferred-apps.glade.h:2
 msgid "<b>Terminal Emulator</b>"
-msgstr "<b>Terminal Emulator</b>"
+msgstr "<b>Terminal-emulator</b>"
 
 #: ../data/ui/preferred-apps.glade.h:3
 msgid "<b>Web Browser</b>"
@@ -254,42 +254,41 @@ msgstr "<b>Webbrowser</b>"
 
 #: ../data/ui/preferred-apps.glade.h:4
 msgid "Command line:"
-msgstr "Opdracht regel:"
+msgstr "Opdrachtregel:"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid "File Associations"
-msgstr ""
+msgstr "Bestandsassociaties"
 
 #: ../data/ui/preferred-apps.glade.h:6 ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Aanbevolen Programma's"
+msgstr "Voorkeurstoepassingen"
 
 #: ../data/ui/preferred-apps.glade.h:7
 msgid "System Applications"
-msgstr "Systeem Toepassingen"
+msgstr "Systeemtoepassingen"
 
 #: ../data/ui/preferred-apps.glade.h:8
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on E-"
 "mail addresses."
 msgstr ""
-"Het E-mailprogramma van uw keuze zal gebruikt worden om E-mails te schrijven "
-"als u op een E-mail adres klikt."
+"Het e-mailprogramma van uw voorkeur zal gebruikt worden om e-mails te "
+"schrijven als u op een e-mailadres klikt."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr ""
-"De Webbrowser van uw keuze zal gebruikt worden om hyperlinks te openen."
+"De webbrowser van uw voorkeur zal gebruikt worden om webkoppelingen te "
+"openen."
 
 #: ../data/ui/exec-file.glade.h:1
-#, fuzzy
 msgid "Execute File"
-msgstr "Meerdere Bestanden"
+msgstr "Bestand uitvoeren"
 
 #: ../data/ui/exec-file.glade.h:2
-#, fuzzy
 msgid "Execute in _Terminal"
-msgstr "Uitvoeren in terminal emulator"
+msgstr "Uitvoeren in _Terminal"
 
 #: ../src/base/fm-utils.c:55 ../src/base/fm-utils.c:84
 #, c-format
@@ -336,7 +335,7 @@ msgstr "Snelkoppelingen"
 
 #: ../src/base/fm-file-info.c:56
 msgid "Mount Point"
-msgstr "Aankoppelingspunt"
+msgstr "Koppelpunt"
 
 #: ../src/base/fm-path.c:729
 msgid "Trash Can"
@@ -380,15 +379,15 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:310
 msgid "The file operation is cancelled and there are some errors."
-msgstr ""
+msgstr "De bestandsoperatie is afgeblazen en er zijn enkele fouten."
 
 #: ../src/gtk/fm-progress-dlg.c:312
 msgid "Cancelled"
-msgstr "Geannuleerd"
+msgstr "Geannulleerd"
 
 #: ../src/gtk/fm-progress-dlg.c:316
 msgid "The file operation is finished, but there are some errors."
-msgstr ""
+msgstr "De bestandsoperatie is voltooid, maar er zijn enkele fouten."
 
 #: ../src/gtk/fm-progress-dlg.c:318
 msgid "Finished"
@@ -400,8 +399,8 @@ msgid ""
 "don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"Sommige bestanden kunnen niet naar de prullenbak verplaatst worden omdat het "
-"onderliggende bestandssysteem dit niet ondersteund.\n"
+"Sommige bestanden kunnen niet naar de prullenbak worden verplaatst, omdat de "
+"onderliggende bestandssystemen dit niet ondersteunen.\n"
 "Wilt u ze in plaats daarvan verwijderen?"
 
 #: ../src/gtk/fm-progress-dlg.c:430
@@ -410,27 +409,27 @@ msgstr ", "
 
 #: ../src/gtk/fm-progress-dlg.c:445
 msgid "Moving files"
-msgstr "Bestanden verplaatsen"
+msgstr "Bestanden aan het verplaatsen"
 
 #: ../src/gtk/fm-progress-dlg.c:448
 msgid "Copying files"
-msgstr "Bestanden kopiëren"
+msgstr "Bestanden aan het kopieren"
 
 #: ../src/gtk/fm-progress-dlg.c:451
 msgid "Trashing files"
-msgstr "Bestanden weggooien"
+msgstr "Bestanden aan het weggooien"
 
 #: ../src/gtk/fm-progress-dlg.c:454
 msgid "Deleting files"
-msgstr "Bestanden verwijderen"
+msgstr "Bestanden aan het verwijderen"
 
 #: ../src/gtk/fm-progress-dlg.c:457
 msgid "Creating symlinks"
-msgstr "Symlinks aanmaken"
+msgstr "Bezig het aanmaken van symbolische koppelingen"
 
 #: ../src/gtk/fm-progress-dlg.c:460
 msgid "Changing file attributes"
-msgstr ""
+msgstr "Bestandseigenschappen aan het veranderen"
 
 #: ../src/gtk/fm-file-properties.c:117 ../src/gtk/fm-file-properties.c:122
 #, fuzzy
@@ -441,16 +440,18 @@ msgstr[1] "%u bytes"
 
 #: ../src/gtk/fm-file-properties.c:176
 msgid "Please enter a valid user name or numeric id."
-msgstr ""
+msgstr "Gelieve een geldige gebruikersnaam of numerieke ID in te voeren."
 
 #: ../src/gtk/fm-file-properties.c:208
 msgid "Please enter a valid group name or numeric id."
-msgstr ""
+msgstr "Gelieve een geldige groepsnaam of numerieke ID in te voeren."
 
 #: ../src/gtk/fm-file-properties.c:356
 msgid ""
 "Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr ""
+"Wilt u deze veranderingen recursief toepassen op alle bestanden en "
+"submappen?"
 
 #: ../src/gtk/fm-file-properties.c:630
 msgid "Files of different types"
@@ -462,11 +463,11 @@ msgstr "Meerdere Bestanden"
 
 #: ../src/gtk/fm-places-view.c:81
 msgid "Mount Volume"
-msgstr "Volume Aankoppelen"
+msgstr "Medium Aankoppelen"
 
 #: ../src/gtk/fm-places-view.c:82
 msgid "Unmount Volume"
-msgstr "Volume Ontkoppelen"
+msgstr "Medium Ontkoppelen"
 
 #: ../src/gtk/fm-places-view.c:83
 msgid "Eject Removable Media"
@@ -475,7 +476,7 @@ msgstr "Verwisselbare Media uitwerpen"
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:96 ../src/gtk/fm-places-view.c:710
 msgid "Rename Bookmark Item"
-msgstr "Hernoem Bladwijzer Item"
+msgstr "Hernoem Bladwijzer-element"
 
 #: ../src/gtk/fm-places-view.c:97
 msgid "Remove from Bookmark"
@@ -499,7 +500,7 @@ msgstr "Hernoemen"
 
 #: ../src/gtk/fm-file-menu.c:93
 msgid "Create Symlink"
-msgstr "Symlink aanmaken"
+msgstr "Symbolische koppeling aanmaken"
 
 #: ../src/gtk/fm-file-menu.c:94
 msgid "Send To"
@@ -515,7 +516,7 @@ msgstr "Hier uitpakken"
 
 #: ../src/gtk/fm-file-menu.c:97
 msgid "Extract To..."
-msgstr "Uitpakken naar"
+msgstr "Uitpakken naar..."
 
 #: ../src/gtk/fm-file-menu.c:258
 msgid "_Restore"
@@ -523,7 +524,7 @@ msgstr "_Herstellen"
 
 #: ../src/gtk/fm-file-menu.c:259
 msgid "Restore trashed files to original paths"
-msgstr "Haal bestanden in de prullenbak terug"
+msgstr "Zet bestanden vanuit de prullenbak terug naar oorspronkelijke plekken"
 
 #: ../src/gtk/fm-dnd-dest.c:450
 msgid "XDirectSave failed."
@@ -531,11 +532,11 @@ msgstr "XDirectSave mislukt."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:96
 msgid "Use selected application to open files"
-msgstr "Gebruik de geselecteerde toepassing om deze bestanden te openen"
+msgstr "Gebruik de geselecteerde toepassing om bestanden te openen"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:103
 msgid "Execute custom command line to open files"
-msgstr ""
+msgstr "Voer een aangepaste opdrachtregel uit om bestanden te openen"
 
 #: ../src/gtk/fm-app-chooser-combo-box.c:185
 msgid "Customize"
@@ -563,15 +564,15 @@ msgstr "Geïnstalleerde Toepassingen"
 
 #: ../src/gtk/fm-gtk-utils.c:45
 msgid "Error"
-msgstr "Error"
+msgstr "Fout"
 
 #: ../src/gtk/fm-gtk-utils.c:278
 msgid "Please select a folder"
-msgstr "Selecteer alstublieft een map"
+msgstr "Gelieve een map te selecteren"
 
 #: ../src/gtk/fm-gtk-utils.c:425
 msgid "Only system administrators have the permission to do this."
-msgstr "Alleen systeem beheerders hebben de rechten om dit te doen."
+msgstr "Alleen systeembeheerders hebben het recht om dit te doen."
 
 #: ../src/gtk/fm-gtk-utils.c:504
 msgid "Do you want to move the selected files to trash can?"
@@ -587,7 +588,7 @@ msgstr "Bestand hernoemen"
 
 #: ../src/gtk/fm-gtk-utils.c:571
 msgid "Please enter a new name:"
-msgstr "Voer alstublieft een nieuwe naam in:"
+msgstr "Gelieve een nieuwe naam in te voeren:"
 
 #: ../src/gtk/fm-gtk-utils.c:593
 msgid "Are you sure you want to empty the trash can?"
@@ -599,33 +600,35 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
+"Dit tekstbestand '%s' lijkt een uitvoerbaar script te zijn.\n"
+"Wat wilt u ermee doen?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:122
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr ""
+msgstr "Dit bestand '%s' is uitvoerbaar. Wilt u het uitvoeren?"
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
 #, c-format
 msgid "The specified directory is not valid"
-msgstr "De specificeerde map is niet juist"
+msgstr "De opgegeven map is niet geldig"
 
 #: ../src/job/fm-file-ops-job-xfer.c:53
 msgid "Source and destination are the same."
-msgstr ""
+msgstr "Bron en bestemming zijn dezelfde."
 
 #: ../src/job/fm-file-ops-job-xfer.c:60
 msgid "Cannot move a folder into its sub folder"
-msgstr ""
+msgstr "Kan een map niet verplaatsen naar zijn eigen submap"
 
 #: ../src/job/fm-file-ops-job-xfer.c:62
 msgid "Cannot copy a folder into its sub folder"
-msgstr ""
+msgstr "Kan een map niet kopieren naar zijn eigen submap"
 
 #: ../src/job/fm-file-ops-job-xfer.c:64
 msgid "Destination is a sub folder of source"
-msgstr ""
+msgstr "Bestemming is een submap van bron"
 
 #: ../src/gtk/fm-places-model.c:451
 msgid "Trash"
@@ -638,160 +641,160 @@ msgstr "Bureaublad"
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr ""
+msgstr "CD-ROM-schijf"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr ""
+msgstr "Onbeschreven CD-ROM-schijf"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr ""
+msgstr "CD-R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr ""
+msgstr "Onbeschreven CD-R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr ""
+msgstr "CD-RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr ""
+msgstr "Onbeschreven CD-RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr ""
+msgstr "DVD-ROM-schijf"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr ""
+msgstr "Onbeschreven DVD-ROM-schijf"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr ""
+msgstr "DVD-RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr ""
+msgstr "Onbeschreven DVD-RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr ""
+msgstr "DVD-RAM-schijf"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr ""
+msgstr "Onbeschreven DVD-RAM-schijf"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr ""
+msgstr "DVD+R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr ""
+msgstr "Onbeschreven DVD+R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr ""
+msgstr "DVD+RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr ""
+msgstr "Onbeschreven DVD+RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr ""
+msgstr "DVD+R DL-schijf"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr ""
+msgstr "Onbeschreven DVD+R DL-schijf"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr ""
+msgstr "DVD+RW DL-schijf"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr ""
+msgstr "Onbeschreven DVD+RW DL-schijf"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr ""
+msgstr "Blu-Ray-schijf"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr ""
+msgstr "Onbeschreven Blu-Ray-schijf"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr ""
+msgstr "Blu-Ray R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr ""
+msgstr "Onbeschreven Blu-Ray R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr ""
+msgstr "Blu-Ray RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr ""
+msgstr "Onbeschreven Blu-Ray RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr ""
+msgstr "HD DVD-schijf"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr ""
+msgstr "Onbeschreven HD DVD-schijf"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr ""
+msgstr "HD DVD-R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr ""
+msgstr "Onbeschreven HD DVD-R-schijf"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr ""
+msgstr "HD DVD-RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr ""
+msgstr "Onbeschreven HD DVD-RW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr ""
+msgstr "MO-schijf"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr ""
+msgstr "Onbeschreven MO-schijf"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr ""
+msgstr "MRW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr ""
+msgstr "Onbeschreven MRW-schijf"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr ""
+msgstr "MRW/W-schijf"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr ""
+msgstr "Onbeschreven MRW/W-schijf"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
-msgstr ""
+msgstr "Onbeschreven Optische Schijf"
 
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
-msgstr ""
+msgstr "Optische Schijf"
