--- a/po/lg.po
+++ b/po/lg.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-21 23:11+0000\n"
+"PO-Revision-Date: 2014-01-22 12:57+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1390345885.0\n"
+"X-POOTLE-MTIME: 1390395447.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -494,7 +494,6 @@ msgid "<b>Mail Client</b>"
 msgstr "<b>Puloguramu eya Email</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
@@ -533,7 +532,6 @@ msgid "<b>Time remaining:</b>"
 msgstr "<b>Ebulayo:</b>"
 
 #: ../data/ui/progress.glade.h:6
-#, fuzzy
 msgid "<b>Errors occurred:</b>"
 msgstr "<b>Musangidwamu obuzibu buno:</b>"
 
@@ -735,17 +733,15 @@ msgid "Customize"
 msgstr "Wekyusize"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
-#, c-format
-#, fuzzy, c-format
+#, c-format, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
-msgstr "Fayiro zibikkuze puloguramu erondedwa"
+msgstr "<b>Londa puloguramu enaabikkulanga fayiro ez'ekika kya \"%s\"</b>"
 
 #: ../src/gtk/fm-app-menu-view.c:224
 msgid "Installed Applications"
 msgstr "Puloguramu eziri ku sisitemu"
 
 #: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1211
-#, fuzzy
 msgid "<No subfolders>"
 msgstr "<Temuli materekero>"
 
@@ -762,18 +758,15 @@ msgid "_Cancel"
 msgstr "_Sazamu"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "C_opy Here"
-msgstr "K_oppa"
+msgstr "K_oppi Gise Wano"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "_Sembeza ku kkono"
+msgstr "_Leeta Wano"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
-#, fuzzy
 msgid "_Link Here"
 msgstr "_Kolawo nyunzi"
 
@@ -790,9 +783,8 @@ msgid "Open _With..."
 msgstr "B_ikkuza..."
 
 #: ../src/gtk/fm-file-menu.c:153
-#, fuzzy
 msgid "Open _With"
-msgstr "B_ikkuza..."
+msgstr "B_ikkuza"
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
@@ -811,9 +803,8 @@ msgid "_Add to Bookmarks"
 msgstr "_Kwata ekifo kino"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
-msgstr "_Kyusa erinnya"
+msgstr "_Kyusa erinnya..."
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -833,9 +824,8 @@ msgstr "Ebi_kwata ku fayiro"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Sembeza ku _ddyo"
+msgstr "Twala mu _Bisuulidwa"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
@@ -1114,14 +1104,12 @@ msgid "Pa_ste and Go"
 msgstr "Pa_atiika otandikirewo okunoonya"
 
 #: ../src/gtk/fm-path-entry.c:727
-#, fuzzy
 msgid "Folder location bar"
-msgstr "Ebika bya fayiro ne puloguramu ezibikolako"
+msgstr "Lubaawo olulaga busangiro bw'etterekero"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "Fayiro _Gikyuse Erinnya"
+msgstr "Tterekero lya Akawunti"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1133,9 +1121,8 @@ msgid "Applications"
 msgstr "Puloguramu"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Sisitemu ya fayiro"
+msgstr "Musingi gwa Sisitemu ya fayiro"
 
 #: ../src/gtk/fm-places-view.c:131
 msgid "_Mount Volume"
@@ -1158,9 +1145,8 @@ msgid "_Rename Bookmark Item"
 msgstr "_Kyusa Erinnya Ly'akakwatakifo"
 
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
-msgstr "_Gyawo akakwatakifo"
+msgstr "_Gyawo kakwatakifo"
 
 #: ../src/gtk/fm-places-view.c:152
 msgid "Move Bookmark _Up"
@@ -1221,9 +1207,9 @@ msgid "Cancelled"
 msgstr "Kisazidwamu"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "Ekibadde kikolebwa ku fayiro kisazidwamu era mubaddemu n'obulemu."
+msgstr ""
+"<b>Ekibadde kikolebwa ku fayiro kimalirizidwa naye mulimu ebitateredde.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1253,21 +1239,18 @@ msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:581
-#, fuzzy
 msgid "Moving"
-msgstr "Nzijulula fayiro"
+msgstr "Nzijulula"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:585
-#, fuzzy
 msgid "Copying"
-msgstr "Nkola koppi mu fayiro"
+msgstr "Nkola koppi mu"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:589
-#, fuzzy
 msgid "Trashing"
-msgstr "Mu bisuulidwa nteekayo fayiro"
+msgstr "Mu bisuulidwa nteekayo"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:593
