--- a/po/sl.po
+++ b/po/sl.po
@@ -2,23 +2,22 @@
 # Copyright (C) 2011 - 2013 Free Software Foundation, Inc.
 # This file is distributed under the same license as the libfm package.
 # Klemen Košir <klemen913@gmail.com>, 2011 - 2013.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2013-09-05 21:14+0000\n"
+"POT-Creation-Date: 2014-01-11 15:20+0200\n"
+"PO-Revision-Date: 2013-12-05 08:33+0000\n"
 "Last-Translator: Klemen <klemen913@gmail.com>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n"
-"%100==4 ? 3 : 0);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || "
+"n%100==4 ? 3 : 0);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1378415692.0\n"
+"X-POOTLE-MTIME: 1386232433.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -384,6 +383,8 @@ msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
 msgstr ""
+"Das Muster entspricht entweder der POSIX shell Musterliste (mit ',' als "
+"Trennzeichen) oder POSIX regulären Ausdruck."
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -451,6 +452,8 @@ msgid ""
 "Any valid content type can be entered here. Wildcard '*' is allowed at end "
 "of the type. Multiple types should be separated with ';'."
 msgstr ""
+"Jeder beliebige Content-Type kann eingegeben werden. Wildcard '*' ist am "
+"Ende des Typus erlaubt. Mehrere Typen müssen mit einem ';' getrennt werden."
 
 #: ../data/ui/filesearch.glade.h:26
 msgid "File _Type"
@@ -739,6 +742,7 @@ msgid "Customize"
 msgstr "Po meri"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
+#, c-format
 #, fuzzy, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
 msgstr "Za odpiranje datotek te vrste bo uporabljen izbrani program."
@@ -765,14 +769,12 @@ msgid "_Cancel"
 msgstr "_Prekliči"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "C_opy Here"
-msgstr "_Kopiraj"
+msgstr "Kopiraj _sem"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "Premakni _levo"
+msgstr "Premakni s_em"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
@@ -799,7 +801,7 @@ msgstr "Odpri _z ..."
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "Copiar ru_ta(s)"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -814,9 +816,8 @@ msgid "_Add to Bookmarks"
 msgstr "_Dodaj med zaznamke"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
-msgstr "P_reimenuj"
+msgstr "_Renombrar…"
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -836,13 +837,12 @@ msgstr "_Lastnosti"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Premakni _desno"
+msgstr "Premakni v _smeti"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Esta carpeta ya está incluida en los marcadores."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -859,7 +859,7 @@ msgstr[3] "bajti"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "explorando… %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -889,27 +889,26 @@ msgid ""
 "Files on this system are hidden if their name starts with a dot ('.'). Hit "
 "<Ctrl+H> to toggle displaying hidden files."
 msgstr ""
-"Če se ime datoteke začne s piko ('.'), je datoteka skrita. Pritisnite <Ctrl"
-"+H>, če želite videti skrite datoteke."
+"Če se ime datoteke začne s piko ('.'), je datoteka skrita. Pritisnite "
+"<Ctrl+H>, če želite videti skrite datoteke."
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "Nalaganje ..."
+msgstr "explorando…"
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
 msgstr "<b>Dostop:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1242
+#: ../src/gtk/fm-file-properties.c:1239
 msgid "Files of different types"
 msgstr "Različne vrste datotek"
 
-#: ../src/gtk/fm-file-properties.c:1286
+#: ../src/gtk/fm-file-properties.c:1283
 msgid "<b>File:</b>"
 msgstr "<b>Datoteka:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1352
+#: ../src/gtk/fm-file-properties.c:1349
 #, fuzzy
 msgid "Multiple files"
 msgstr "Več datotek"
@@ -945,7 +944,7 @@ msgstr "Mesto"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Erweiterung"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -1133,9 +1132,8 @@ msgid "Folder location bar"
 msgstr "Datotečne povezave"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "_Preimenuj mapo"
+msgstr "Domača mapa"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1147,9 +1145,8 @@ msgid "Applications"
 msgstr "Programi"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Datotečni sistem"
+msgstr "Koren datotečnega sistema"
 
 #: ../src/gtk/fm-places-view.c:131
 msgid "_Mount Volume"
@@ -1226,16 +1223,15 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr ""
+msgstr "<b>Se produjeron errores antes de detener la operación.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
 msgstr "Preklicano"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "Dejanje je bilo preklicano in pojavile so se napake."
+msgstr "<b>Se completó la operación con errores.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1264,67 +1260,77 @@ msgid ", "
 msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:579
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:581
 msgid "Moving"
-msgstr "Premikanje datotek"
+msgstr "Moviendo"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:583
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:585
 msgid "Copying"
-msgstr "Kopiranje datotek"
+msgstr "Copiando"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:587
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:589
 msgid "Trashing"
-msgstr "Premikanje datotek v smeti"
+msgstr "Moviendo a la papelera"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:591
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:593
 msgid "Deleting"
-msgstr "Brisanje datotek"
+msgstr "Eliminando"
 
-#. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:595
-msgid "Symlinking"
+#. translators: it is part of "Creating link /path/xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:597
+msgid "Creating link"
 msgstr ""
 
-#. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:602
+#. translators: 'In:' string is followed by destination folder path
+#: ../src/gtk/fm-progress-dlg.c:599
+msgid "<b>In:</b>"
+msgstr ""
+
+#: ../src/gtk/fm-progress-dlg.c:600
+msgid "Creating links to files"
+msgstr ""
+
+#. translators: it is part of "Changing attributes of xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:607
 #, fuzzy
 msgid "Changing attributes of"
 msgstr "Spreminjanje atributov datotek"
 
+#: ../src/gtk/fm-progress-dlg.c:608
+msgid "Changing attributes of files"
+msgstr ""
+
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:606
+#: ../src/gtk/fm-progress-dlg.c:614
 #, fuzzy
 msgid "Restoring"
 msgstr "_Obnovi"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:613
+#: ../src/gtk/fm-progress-dlg.c:624
+#, c-format
 #, fuzzy, c-format
 msgid "%s files"
 msgstr "slike"
 
-#: ../src/gtk/fm-progress-dlg.c:615
+#: ../src/gtk/fm-progress-dlg.c:627
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>Operación en progreso…</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
-#: ../src/gtk/fm-progress-dlg.c:619
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:633
+#, c-format
 msgid "<b>%s file:</b>"
-msgstr "<b>Datoteka:</b>"
+msgstr "<b>%s el archivo:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:622
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:636
+#, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>Datoteka:</b>"
+msgstr "<b>%s los archivos:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1360,12 +1366,10 @@ msgid "_Hide %s"
 msgstr "_Skrij %s"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
 msgstr "Premakni _levo"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
 msgstr "Premakni _desno"
 
@@ -1375,7 +1379,6 @@ msgid "Show %s"
 msgstr "Pokaži %s"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
 msgstr "Pozabi _širino"
 
@@ -1550,8 +1553,7 @@ msgstr "Neveljaven cilj"
 #: ../src/modules/vfs-menu.c:2979
 #, c-format
 msgid "FmMenuVFileMonitor: folder '%s' not found in menu cache"
-msgstr ""
-"FmMenuVFileMonitor: mape \"%s\" ni mogoče najti v predpomnilniku menija"
+msgstr "FmMenuVFileMonitor: mape \"%s\" ni mogoče najti v predpomnilniku menija"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/modules/vfs-search.c:985
@@ -1559,12 +1561,10 @@ msgid "Search"
 msgstr "Iskanje"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
 msgstr "Rezultati iskanja"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Izberite izvedljivo datoteko"
 
